# internal/pkg/router/http_router.go
@@ -61,7 +61,7 @@ func (h HttpRouter) InstallRouter(app *fiber.App) {
 	app.Get("/jobs", loggedInMiddleware, controllers.HandleJobs)
 
 	// image processing status endpoint (HTML + API status in ApiRouter)
-	app.Get("/image/status/:uuid", loggedInMiddleware, controllers.HandleImageProcessingStatus)
+	app.Get("/images/:uuid/status", loggedInMiddleware, controllers.HandleImageProcessingStatus)
 	// image viewer
 	app.Get("/image/:uuid", loggedInMiddleware, controllers.HandleImageViewer)
 
